--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ window.onload = function () {
     <div id="b">
         <h1 style="color : white;text-align : center;">LOGO</h1>
         <h3 style="color : white;text-align : center;"><u>COMPANY NAME</u></h3>
-        <button style="background-color:black;color:white"><a href="/signup" style="background-color:black;color:white">signup</a></button>
+        <button style="background-color:black;color:white"><a href="signup/" style="background-color:black;color:white">signup</a></button>
     </div>
     </header>
     </br>
