--- a/index.html
+++ b/index.html
@@ -208,11 +208,7 @@ window.onload = function () {
     <div id="b">
         <h1 style="color : white;text-align : center;">LOGO</h1>
         <h3 style="color : white;text-align : center;"><u>COMPANY NAME</u></h3>
-        <button id="b1" style="color : white"><a href='/home' style="color : white"><b>HOME</b></a></button>
-        <button id="b2" style="color : white"><a href='/about' style="color : white"><b>ABOUT</b></a></button>
-        <button id="b3" style="color : white"><a href='/dashboard' style="color : white"><b>DASHBOARD</b></a></div>
-        <button id="b4" style="color : white"><a href='/login' style="color:white"><b>LOGIN</b></a></button>
-        <button id="b5" style="color : white"><a href='/signup' style="color:white"><b>SIGN UP</b></a></button>
+        <button style="color : white; background-color:black"><a href='/signup' style="color:white"><b>SIGN UP</b></a></button>
     </div>
     </header>
     </br>
