--- a/index.html
+++ b/index.html
@@ -206,8 +206,10 @@ window.onload = function () {
 <body style=" background-image : url('img2.jpg');background-attachment:fixed;background-size: cover;">
         <header>
     <div id="b">
-        <h1 style="color : white;text-align : center;">LOGO</h1>
-        <h3 style="color : white;text-align : center;"><u>COMPANY NAME</u></h3>
+        <div id="company_logo" style="background-color:black"><img src="logo.jpg" style="border-radius:50%;width:90px;position:relative;top:10px;left:50px">
+    <h1 style="color:white; background-color:black">THE CODERS</h1>
+  
+    
         <button style="color : white; background-color:black"><a href='/signup' style="color:white"><b>SIGN UP</b></a></button>
     </div>
     </header>
