--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ window.onload = function () {
     <h1 style="color:white; background-color:black">THE CODERS</h1>
   
     
-        <button style="color : white; background-color:black"><a href='signup.html'><b>SIGN UP</b></a></button>
+        <button style="color : white; background-color:black"><a href='/signup'><b>SIGN UP</b></a></button>
     </div>
     </header>
     </br>
