--- a/signup.html
+++ b/signup.html
@@ -76,8 +76,8 @@ window.onclick = function(event) {
     </div>
     <div style="text-align:center; position:relative;left:10%; background-color:red;color:white;width:60%;border-radius:7%;display:inline-block">
         <div style="background-color:magenta;margin-top:18px;padding:10px;display:flex;justify-content:space-around">
-            <a href="signup.html" style="color:white"><h3>Signup</a></h3>
-            <a href="login.html" style="color:white"><h3>Login</a></h3>
+            <a href="/signup" style="color:white"><h3>Signup</a></h3>
+            <a href="/login" style="color:white"><h3>Login</a></h3>
             <a href="/account" style="color:white"><h3>account</a></h3>
         </div>
     <h1>Signup Page</h1><br/>
